...
          .ignoresSafeArea()
        
        ScrollView {
          FundsContentView(
            title: "Receive Funds",
            walletAddress: wallet.address,
            buttonTitle: "Done",
            buttonAction: { dismiss() },
            onCopyAddress: copyAddress
          )
        }
      }
      .navigationTitle("Receive Funds")
...
